@@ -1,7 +1,8 @@
 package com.fueltracker.utils;
 
-import com.fueltracker.model.entity.Expenses;
-import com.fueltracker.model.entity.Refuels;
+import com.fueltracker.model.entity.Expense;
+import com.fueltracker.model.entity.Refuel;
+import org.springframework.stereotype.Component;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
@@ -11,40 +12,26 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
+@Component
 public class DistanceCalculator {
 
-    public long calculateTotalDistance(List<Refuels> refuels, List<Expenses> expenses) {
+    public int calculateTotalDistance(List<Refuel> refuels, List<Expense> expenses) {
         List<Integer> distances = new ArrayList<>();
 
         refuels.forEach(refuel -> distances.add(refuel.getOdometer()));
         expenses.forEach(expense -> distances.add(expense.getOdometer()));
         Collections.sort(distances);
 
-        return distances.get(distances.size() - 1) - distances.get(0);
+        return distances.getLast() - distances.getFirst();
     }
 
-    public BigDecimal calculateDistancePerDay(List<Refuels> refuels, List<Expenses> expenses) {
-        long totalDistance = calculateTotalDistance(refuels, expenses);
+    public BigDecimal calculateDistancePerDay(List<Refuel> refuels, List<Expense> expenses) {
+        int totalDistance = calculateTotalDistance(refuels, expenses);
 
         return BigDecimal.valueOf(totalDistance).divide(calculateAmountOfDays(refuels, expenses), RoundingMode.HALF_UP);
     }
 
-    public long calculateTotalDistance(List<Refuels> refuels) {
-        List<Integer> distances = new ArrayList<>();
-
-        refuels.forEach(refuel -> distances.add(refuel.getOdometer()));
-        Collections.sort(distances);
-
-        return distances.get(distances.size() - 1) - distances.get(0);
-    }
-
-    public BigDecimal calculateDistancePerDay(List<Refuels> refuels) {
-        long totalDistance = calculateTotalDistance(refuels);
-
-        return BigDecimal.valueOf(totalDistance).divide(calculateAmountOfDays(refuels), RoundingMode.HALF_UP);
-    }
-
-    public BigDecimal calculateAmountOfDays(List<Refuels> refuels, List<Expenses> expenses) {
+    public BigDecimal calculateAmountOfDays(List<Refuel> refuels, List<Expense> expenses) {
         List<LocalDateTime> dateTimes = new ArrayList<>();
 
         refuels.forEach(refuel -> dateTimes.add(refuel.getDate()));
@@ -52,22 +39,11 @@ public class DistanceCalculator {
 
         Collections.sort(dateTimes);
 
-        long duration = ChronoUnit.DAYS.between(dateTimes.get(0).toLocalDate(), dateTimes.get(dateTimes.size() - 1).toLocalDate());
+        long duration = ChronoUnit.DAYS.between(dateTimes.getFirst().toLocalDate(), dateTimes.getLast().toLocalDate());
 
         if (duration == 0) {
             return BigDecimal.ONE;
         }
-        return BigDecimal.valueOf(duration);
-    }
-
-    public BigDecimal calculateAmountOfDays(List<Refuels> refuels) {
-        List<LocalDateTime> dateTimes = new ArrayList<>();
-
-        refuels.forEach(refuel -> dateTimes.add(refuel.getDate()));
-
-        Collections.sort(dateTimes);
-
-        long duration = ChronoUnit.DAYS.between(dateTimes.get(0).toLocalDate(), dateTimes.get(dateTimes.size() - 1).toLocalDate());
         return BigDecimal.valueOf(duration);
     }
 }
